refactoring css + first axios request

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                     </label>
                 </div>
                 <div class="grid-results">
-                    <ul class="row">
+                    <ul id="row" class="row">
                         <li class="col">
                             <div class="item">
                              <div class="name">
