aggiunta funzione sorted

--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,12 @@
                     </label>
                     <label for="">
                         <span></span>
-                        <button id="change-order">Change Order</button>
+                        <button id="order-by" id="change-order">Change Order</button>
                     </label>
                 </div>
                 <div class="grid-results">
                     <ul id="row" class="row">
-                        <li class="col">
+                        <!-- <li class="col">
                             <div class="item">
                              <div class="name">
                                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -81,7 +81,7 @@
                                     </small>
                                 </div>   
                                </div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
 
