--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>ScrolLine</title>
-    </head>
-    <body>
-        <div id="app">
-            <header>
-                <div class="title">
-                    <h1>
-                        My Time ScrolLine
-                    </h1>
-                </div>
-            </header>
-            <main>
-                <div class="actions">
-                    <label for="from">
-                        <span>From:</span>
-                    <input type="date" name="from" id="from">
-                    </label>
-                    <label for="to">
-                        <span>To:</span>
-                        <input type="date" name="to" id="to">
-                    </label>
-                    <label for="">
-                        <span></span>
-                        <button id="search">Search</button>
-                    </label>
-                    <label for="">
-                        <span></span>
-                        <button id="order-by" id="change-order">Change Order</button>
-                    </label>
-                </div>
-                <div class="grid-results">
-                    <ul id="row" class="row">
-                        <!-- <li class="col">
+
+<head>
+    <meta charset="utf-8" />
+    <title>ScrolLine</title>
+</head>
+
+<body>
+    <div id="app">
+        <header>
+            <div class="title">
+                <h1>
+                    My Time ScrolLine
+                </h1>
+            </div>
+        </header>
+        <main>
+            <div class="actions">
+                <label for="from">
+                    <span>From:</span>
+                    <input id="from" type="date" name="from" id="from">
+                </label>
+                <label for="to">
+                    <span>To:</span>
+                    <input id="to" type="date" name="to" id="to">
+                </label>
+                <label for="">
+                    <span></span>
+                    <button id="search">Search</button>
+                </label>
+                <label for="">
+                    <span></span>
+                    <button id="order-by" id="change-order">Change Order</button>
+                </label>
+                <small id="error-log" class="error-log">[Error log here]</small>
+            </div>
+            <div class="grid-results">
+                <ul id="row" class="row">
+                    <!-- <li class="col">
                             <div class="item">
                              <div class="name">
                                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -82,11 +85,11 @@
                                 </div>   
                                </div>
                         </li> -->
-                    </ul>
-                </div>
+                </ul>
+            </div>
 
-            </main>
-        </div>
-    </body>
-    
+        </main>
+    </div>
+</body>
+
 </html>
