--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="title">
                 <h1>
-                    My Time ScrolLine
+                    My Time <span><span class="txt-c-red-400">Scrol</span>Line</span>
                 </h1>
             </div>
         </header>
