--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
             <div class="actions">
                 <label for="from">
                     <span>From:</span>
-                    <input id="from" type="date" name="from" id="from">
+                    <input id="from" type="date" name="from">
                 </label>
                 <label for="to">
                     <span>To:</span>
-                    <input id="to" type="date" name="to" id="to">
+                    <input id="to" type="date" name="to">
                 </label>
                 <label for="">
                     <span></span>
-                    <button id="search">Search</button>
+                    <button id="filter">Filter</button>
                 </label>
                 <label for="">
                     <span></span>
-                    <button id="order-by" id="change-order">Change Order</button>
+                    <button id="order-by">Change Order</button>
                 </label>
-                <small id="error-log" class="error-log">[Error log here]</small>
+                <small id="error-log" class="error-log"></small>
             </div>
             <div class="grid-results">
                 <ul id="row" class="row">
