--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 </label>
                 <small id="error-log" class="error-log"></small>
             </div>
-            <div class="grid-results">
-                <ul id="row" class="row">
+            <div id="grid-results" class="grid-results">
+                <!-- <ul id="row" class="row"> -->
                     <!-- <li class="col">
                             <div class="item">
                              <div class="name">
@@ -85,7 +85,7 @@
                                 </div>   
                                </div>
                         </li> -->
-                </ul>
+                <!-- </ul> -->
             </div>
 
         </main>
